# textual-todo

./: LICENSE  Makefile  README.md  pyproject.toml
textual_todo/: __init__.py  todo.py
