[project]
name = "textual-todo"
version = "0.0.0"
description = "Create a SQLite database containing data from your Pocket account"
readme = "README.md"
authors = [{name = "pacrob"}]
license = {text = "MIT"}
dependencies = [
    "textual",
    "textual-dev",
]
requires-python = ">3.7"
scripts = {todo = "textual_todo:main"}

[project.urls]
homepage = "https://github.com/pacrob/textual-todo"
Changelog = "https://github.com/pacrob/textual-todo/releases"
Issues = "https://github.com/pacrob/textual-todo/issues"
CI = "https://github.com/pacrob/textual-todo/actions"

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "isort",
    "pytest-cov",
    "pytest-mock"
]

[build-system]
requires = ["flit_core >=3.0,<4"]
build-backend = "flit_core.buildapi"

[flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".eggs",
    ]

[tool.isort]
profile = "black"
